--- a/manifest.json
+++ b/manifest.json
@@ -14,9 +14,7 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "favicon_v2.ico"
     }
   },
   "background": {
